--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel='stylesheet' href='./css/index.css'></link>
     <script src='https://code.jquery.com/jquery-3.6.0.min.js' integrity='sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=' crossorigin='anonymous'></script>
     <script src='/socket.io/socket.io.js'></script>
-    <script src='/assets/js/ChatPrototypes.js' type='module'></script>
-    <script src='/assets/js/ChatUI.js' type='module'></script>
-    <script src='/assets/js/Chat.js' type='module'></script>
+    <script src='/webchat/assets/js/ChatPrototypes.js' type='module'></script>
+    <script src='/webchat/assets/js/ChatUI.js' type='module'></script>
+    <script src='/webchat/assets/js/Chat.js' type='module'></script>
 
 	<title>WebChat</title>
 </head>
