--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 
-    <link rel='stylesheet' href='./css/index.css'></link>
+    <link rel='stylesheet' href='/webchat/assets/css/index.css'></link>
     <script src='https://code.jquery.com/jquery-3.6.0.min.js' integrity='sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=' crossorigin='anonymous'></script>
-    <script src='/socket.io/socket.io.js'></script>
+    <script src="https://cdn.socket.io/3.1.3/socket.io.min.js" integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh" crossorigin="anonymous"></script>
     <script src='/webchat/assets/js/ChatPrototypes.js' type='module'></script>
     <script src='/webchat/assets/js/ChatUI.js' type='module'></script>
     <script src='/webchat/assets/js/Chat.js' type='module'></script>
