--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel='stylesheet' href='/webchat/assets/css/index.css'></link>
     <script src='https://code.jquery.com/jquery-3.6.0.min.js' integrity='sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=' crossorigin='anonymous'></script>
-    <script src="https://cdn.socket.io/3.1.3/socket.io.min.js" integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh" crossorigin="anonymous"></script>
+    <script src='https://cdn.socket.io/3.1.3/socket.io.min.js' integrity='sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh' crossorigin='anonymous'></script>
     <script src='/webchat/assets/js/ChatPrototypes.js' type='module'></script>
     <script src='/webchat/assets/js/ChatUI.js' type='module'></script>
     <script src='/webchat/assets/js/Chat.js' type='module'></script>
