--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
             <div id='room-list'></div>
             <div id='message'></div>
             <form id='send-form'>
-                <input id='send-message'/>
+                <input id='send-message' placeholder="Write your message" />
                 <input id='send-button' type='submit' value='Send'>
-                <div id='help'>
-                    Chat commands:
-                    <ul>
-                        <li>Change nickname:<code>/nick [username]</code></li>
-                    </ul>
-                </div>
             </form>
+            <div id='help'>
+                Chat commands:
+                <ul>
+                    <li>Change nickname:<code>/nick [username]</code></li>
+                </ul>
+            </div>
     </div>
 </body>
 </html>
