fixes but not work 100%

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id='room-list'></div>
             <div id='message'></div>
             <form id='send-form'>
-                <input id='send-message' placeholder="Write your message" />
+                <input id='send-message' placeholder="Write your message" required/>
                 <input id='send-button' type='submit' value='Send'>
             </form>
             <div id='help'>
